login assingment odne

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <h1>Login Form</h1>
 
     <p>Username:</p>
-    <input type="text">
+    <input type="text" id="userIn">
 
     <p>Password:</p>
-    <input type="text">
+    <input type="text" id="passIn">
 
     <br>
     <br>
 
     <button id="loginBtn">LOGIN</button>
 
+
+    <p id="output" hidden></p>
 
     <!-- Js link -->
     <script src="script.js"></script>
